--- a/frontend/public/Navigation-with-Button.css
+++ b/frontend/public/Navigation-with-Button.css
@@ -92,7 +92,7 @@
 }
 
 .navigation-clean-button .navbar-text .action-button, .navigation-clean-button .navbar-text .action-button:active, .navigation-clean-button .navbar-text .action-button:hover {
-  background: #56c6c6;
+  background: #9c27b0;
   border-radius: 20px;
   font-size: inherit;
   color: #fff;
